# dm420

./: .gitignore  ARCHITECTURE_REVIEW.md  CLAUDE.md  Cargo.toml  JOEL.md  JOELS_ROADMAP.md  LICENSE  OVERVIEW.md  README.md  STATUS.md  TODO.md  TODO_NETWORK.md  dm420.example.toml  joels-notes.md
crates/archive/: Cargo.toml
crates/archive/src/: lib.rs
crates/archive/tools/: qso_grammar.py
crates/audio/: Cargo.toml
crates/audio/src/: device.rs  dsp.rs  lib.rs  meta.rs  player.rs  recorder.rs
crates/bus/: Cargo.toml
crates/bus/examples/: fake_command.rs  fake_pubsub.rs
crates/bus/src/: error.rs  handle.rs  lib.rs  message.rs  recorder.rs  topic.rs
crates/bus/tests/: integration.rs
crates/callbook/: Cargo.toml  build.rs
crates/callbook/src/: lib.rs
crates/core/: Cargo.toml
crates/core/examples/: decode_wav.rs  encode_wav.rs
crates/core/src/: band_status.rs  clock.rs  control.rs  decode.rs  enrich.rs  health.rs  interlock.rs  lib.rs  map.rs  parse.rs  rig_adapter.rs  scan.rs  tx.rs  worked.rs
crates/dsp/: Cargo.toml
crates/dsp/src/: lib.rs
crates/gui/: Cargo.toml  build.rs
crates/gui/assets/flags/: ATTRIBUTION.md
crates/gui/src/: app.rs  app_nap.rs  bus_view.rs  chrome.rs  config_toml.rs  flag.rs  format.rs  geo.rs  geo_data.rs  lane_finder.rs  logging.rs  main.rs  panel_data.rs  send.rs  settings.rs  theme.rs  waterslide_panel.rs  waterslide_sim.rs
crates/gui/src/panels/: band_scan.rs  band_status.rs  call_sign.rs  contacts.rs  log_book.rs  mod.rs  waterfall.rs
crates/gui/src/panels/waterfall/: config_form.rs  mod.rs  render.rs  scan_overlay.rs  send_row.rs
crates/gui/tools/: gen_geo.py  gen_relief.py
crates/logbook/: Cargo.toml
crates/logbook/src/: lib.rs
crates/logbook/tests/: startup_replay_overflow.rs
crates/mocks/: Cargo.toml
crates/mocks/src/: lib.rs
crates/modes/: ATTRIBUTION.md  Cargo.toml  PORT_STATUS.md
crates/modes/examples/: ab_jt9.rs  crowd_recall.rs
crates/modes/src/: ap.rs  arrl_fd.rs  cohere.rs  cohere_ft4.rs  constants.rs  crc.rs  decode.rs  encode.rs  fft.rs  ldpc.rs  lib.rs  message.rs  osd.rs  slot.rs  subtract.rs  text.rs  waterfall.rs
crates/modes/tests/: fixtures_decode.rs
crates/modes/tools/: gen_constants.py
crates/net/: Cargo.toml
crates/net/src/: discovery.rs  gset.rs  lib.rs  peers.rs  wire.rs
crates/net/tests/: loopback.rs  shared_log.rs  working_beacon.rs
crates/qso/: Cargo.toml
crates/qso/src/: engine.rs  lib.rs  message.rs  shell.rs
crates/rig/: Cargo.toml
crates/rig/src/: actor.rs  catrig.rs  channel.rs  codec.rs  lib.rs  mock.rs  ports.rs  probe.rs
crates/scanner/: Cargo.toml
crates/scanner/src/: lib.rs
crates/types/: Cargo.toml
crates/types/src/: lib.rs
design_handoff_daylight_color/: Martian Hybrid.dc.html  MartianHybrid.dc.html  README.md
docs/: FEASIBILITY.md  band_scanner.md  bus-handoff.md  call_sign_lookup_panel.md  ct-local-llm-feedback.md  decoder_ap_handoff.md  decoder_ft4_coherent_handoff.md  decoder_phase2_handoff.md  decoder_sensitivity_plan.md  fft_migration_proposal.md  ft4_architecture.md  layout_persistence_proposal.md  live_pipeline_notes.md  log_book.md  map_panel.md  message-catalog.md  networking.md  offset_hold_proposal.md  progress_fsm_starter.md  qso_engine_improvements.md  qso_flow.md  radio_control.md  waterslide_panel.md  wsjtx_decoder_comparison.md  wsjtx_qso_sequencing.md
docs/joel/: README.md  fd-exchange-encode-bug.md  qsos-and-the-progress-fsm.md
fd-results/: FIELD_DAY_2026_N0JDC.md  N0JDC_2026_FD.cbr  fd_crosscheck.py  fd_logbook_check.py  fd_logbook_comparison.txt  fd_report.py  fd_submission_report.txt  fd_worked_stations.csv  logbook-joel.json  logbook-josh.json  make_cabrillo.py  make_fd_writeup.py  manual_qsos.csv
