[workspace]
resolver = "3"
members = ["crates/*"]

# Shared metadata — every member crate inherits these via `xxx.workspace = true`.
[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT"
authors = ["Josh Carter (N0JDC)", "Joel Odom (W4LL)"]
repository = "https://github.com/joshcarter/dm420"

# Centralized, pinned dependency versions. Member crates opt in with
# `<crate>.workspace = true` so versions never drift between components.
[workspace.dependencies]
# --- internal crates (the bus is the spine; types is the shared vocabulary) ---
types = { path = "crates/types" }
bus = { path = "crates/bus" }
core = { path = "crates/core" }
rig = { path = "crates/rig" }
audio = { path = "crates/audio" }
dsp = { path = "crates/dsp" }
modes = { path = "crates/modes" }
qso = { path = "crates/qso" }
callbook = { path = "crates/callbook" }
logbook = { path = "crates/logbook" }
archive = { path = "crates/archive" }
scanner = { path = "crates/scanner" }
net = { path = "crates/net" }

# --- GUI stack (pinned exactly per docs/FEASIBILITY.md; the spike validated these) ---
eframe = "0.34.3"
egui = "0.34.3"
egui_tiles = "0.15.0"
egui_extras = "0.34.3"
image = { version = "0.25.10", default-features = false, features = ["png"] }

# --- macOS App Nap suppression (gui binary only) ---
# DM420 keys a real transmitter; the key-down and PTT-watchdog paths run on
# background threads, which macOS App Nap throttles when the window is backgrounded
# (see crates/gui/src/app_nap.rs). An NSProcessInfo activity assertion turns that
# off. Pinned to the versions eframe already pulls in transitively so Cargo unifies
# to one build (no new objc2 in the lock).
objc2 = "0.6.4"
objc2-foundation = { version = "0.3.2", features = ["NSProcessInfo", "NSString"] }

# --- async / bus transport ---
tokio = { version = "1", features = ["rt-multi-thread", "sync", "macros", "time", "net"] }

# --- LAN gossip (the `net` crate; see docs/networking.md) ---
mdns-sd = "0.11"      # mDNS/DNS-SD peer discovery on the LAN

# --- serialization (message catalog payloads, recorder, ADIF/JSON) ---
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# --- hardware I/O (component owners enable when implementing) ---
serialport = "4"   # Kenwood CAT (rig)
cpal = "0.15"      # cross-platform audio capture/playback (audio)
hound = "3.5"      # uncompressed WAV read/write (audio)

# --- vendored rig/audio/modes support (Joel's prototype) ---
crossbeam-channel = "0.5" # rig actor + audio capture channels
tracing = "0.1"           # lightweight logging facade (all crates emit through it)
# Logging backend — only the `gui` binary installs a subscriber (see gui/logging.rs).
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"  # non-blocking file writer for dm420.log

# --- misc ---
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
thiserror = "1"

[profile.release]
opt-level = 3
