[package]
name = "audio"
edition.workspace = true
version.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Audio capture/playback for kenctl: cpal streams, uncompressed WAV via hound, level metering, sidecar metadata, and a windowed-sinc resampler (48k -> 12k groundwork for FT8 decode)."

[dependencies]
cpal.workspace = true
hound.workspace = true
crossbeam-channel.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile = "3"
