[package]
name = "bus"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "In-process message bus (BusHandle over tokio channels): typed topics, four delivery classes, request/serve, record + replay. Designed to ride a network transport later, unchanged."

[dependencies]
types.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
