[package]
name = "bus"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
description = "In-process message bus (BusHandle over tokio channels): typed topics, four delivery classes, request/serve, record + replay. Designed to ride a network transport later, unchanged."

[dependencies]
types.workspace = true
# fs + io-util are needed on top of the workspace defaults for the recorder's
# async NDJSON writer task.
tokio = { workspace = true, features = ["fs", "io-util"] }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
