[package]
name = "core"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
description = "Radio-agnostic app core: clock/scheduler, interlock granter, decode enrichment, and app-state composition over the bus."

[dependencies]
bus.workspace = true
types.workspace = true
