[package]
name = "gui"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
description = "Martian Hybrid egui front-end: waterslide, log, map, and band-scanner panels."

# The application binary. Package is `gui` (the handoff's member name); the
# shipped binary is `dm420`. Build/run with `cargo run -p gui`.
[[bin]]
name = "dm420"
path = "src/main.rs"

[dependencies]
eframe.workspace = true
egui.workspace = true
egui_tiles.workspace = true
image.workspace = true
chrono.workspace = true

# The bus spine + shared message vocabulary. Panels read live bus data through
# the `BusView` bridge (`bus_view.rs`) instead of the spike's `panel_data`.
bus.workspace = true
types.workspace = true

# Background async runtime for the bus bridge, and the mock producers that feed
# it until the real rig/dsp/scanner/logbook crates take over.
tokio.workspace = true
mocks.workspace = true

# The real rig/decode producers (vendored Joel + bus adapters). Renamed to avoid
# shadowing the std `core` crate. Enabled at runtime via `DM420_REAL=1`.
app_core = { package = "core", path = "../core" }
