[package]
name = "logbook"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
description = "Log store: in-memory + on-disk persistence, ADIF import/export, and the G-set merge that folds in gossiped peer contacts."

[dependencies]
bus.workspace = true
types.workspace = true
tokio.workspace = true
tracing.workspace = true
serde_json.workspace = true
