[package]
name = "mocks"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
description = "Mock data providers: tokio tasks that publish live-ish FT8 traffic onto the bus."

[dependencies]
# Producers publish typed payloads onto the bus; nothing here touches hardware.
bus.workspace = true
types.workspace = true
tokio.workspace = true
