[package]
name = "rig"
edition.workspace = true
version.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Kenwood CAT rig control: typed codec, serial transport, in-memory mock, and a single-owner rig actor."

[dependencies]
serialport.workspace = true
crossbeam-channel.workspace = true
serde.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
serde_json.workspace = true
