[package]
name = "scanner"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Band-scanner strategy: time-slices a single receiver across bands, reporting per-band heard/unworked counts."

[dependencies]
bus.workspace = true
types.workspace = true
